# aima-server

./: .gitignore  README.md
bootstrap/: README.md  bootstrap.ps1.tpl  bootstrap.sh.tpl  doctor.ps1.tpl  doctor.sh.tpl  go.ps1.tpl  go.sh.tpl  worker-bootstrap.ps1.tpl  worker-bootstrap.sh.tpl
cli/: pyproject.toml
cli/src/aima_cli/: api.py  main.py  manifest.py  os_profile.py  owner_backed.py  owner_runtime.py  renderer.py  runtime.py  session.py  state.py
cli/tests/: test_device_cli.py  test_os_profile.py  test_runtime.py
docs/: api-contract.md  architecture.md
