[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aima-cli"
version = "0.1.0"
description = "AIMA cross-platform device CLI"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1.0",
  "asgi-lifespan>=2.1,<3.0",
]

[project.scripts]
aima = "aima_cli.main:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
